@startuml
' Entités principales
class User {
  -id: Long <<PK>>
  -email: String <<UNIQUE>>
  -name: String
  -password: String
}

class Agent {
  -id: Long <<PK>>
  -name: String
  -trainingStatus: Status
  -version : String
  -user: User <<FK>>
}

class Feature {
  -id: Long <<PK>>
  -name: String <<UNIQUE>>
  -description: String
}

class ParameterDefinition {
  -id: Long <<PK>>
  -name: String
  -defaultValue: String
  -description: String
  -minValue: String
  -maxValue: String
  -type: ParameterTypeEnum
  -enumValues: String[]
  -fileName: String
  -required: boolean
  -feature: Feature <<FK>>
}

enum ParameterTypeEnum {
  INTEGER
  DOUBLE
  STRING
  BOOLEAN
  DATE
  ENUM
  FILE
}

enum Status {
  PENDING
  IN_PROGRESS
  COMPLETED
  FAILED
  CANCELLED
  ACTIVE
  INACTIVE
}
class AgentFeature {
  -id: Long <<PK>>
  -agent: Agent <<FK>>
  -feature: Feature <<FK>>
}

class ParameterValue {
  -id: Long <<PK>>
  -value: String
  -agentFeature: AgentFeature <<FK>>
  -parameterDefinition: ParameterDefinition <<FK>>
}

class Signal {
  -id: Long <<PK>>
  -signalDate: LocalDateTime
  -estimatedAction: String
  -signal: String
  -probability: Double
  -probabilities: JSONB
  -volume: Double
  -notional: Double
  -stopLossPrice: Double
  -riskAmount: Double
  -sizingMethod: String
  -warnings: String[]
  -status: SignalStatus
  -agent: Agent <<FK>>
}

enum SignalStatus {
  NEW
  READ
  ARCHIVED
}

' Relations entre entités
User "1" -- "*" Agent : possède >
Agent "1" -- "*" AgentFeature : configure >
Agent "1" -- "*" Signal : génère >
Feature "1" -- "*" AgentFeature : utilisée dans >
Feature "1" -- "*" ParameterDefinition : définit >
AgentFeature "1" -- "*" ParameterValue : contient >
ParameterDefinition "1" -- "*" ParameterValue : instancie >

@enduml
